added second row of header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,23 @@
           </nav>
         </div>
       </div>
-      <div class="row"></div>
+      <div class="row">
+        <div class="logo">
+          <a href="/"><img src="./images/logo-primark-hq.png" alt="Primark"></a>
+        </div>
+        <div class="menu">
+          <nav>
+            <a href="#">Features</a>
+            <a href="#">Products</a>
+            <a href="#">Primania</a>
+            <a href="#">Stores</a>
+            <a href="#">Our Ethics</a>
+          </nav>
+        </div>
+        <div class="search">
+          <button id="search-toggle"><span class="sr-only">Toggle Search Menu</span></button>
+        </div>
+      </div>
     </header>
   </div>
 
