added footer markup

--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
         </div>
       </div>
     </header>
+
+    <footer>
+      2016 &copy; primark stores limited
+      <nav>
+        <a href="#">Customer Service</a>
+        <a href="#">Terms of Use</a>
+        <a href="#">Privacy &amp; Cookies</a>
+        <a href="#">Community Guidelines</a>
+        <a href="#">About Us</a>
+        <a href="#">Subscribe to Newsletter</a>
+      </nav>
+    </footer>
   </div>
 
   <!-- VENDOR SCRIPTS -->
