--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <!-- VENDOR STYLESHEETS -->
 
+
   <!-- CUSTOM STYLESHEETS -->
+  <link rel="stylesheet" href="./styles/fonts.css">
   <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
@@ -17,11 +19,11 @@
       <div class="row">
         <div class="social-menu">
           <ul>
-            <li><a href="#"><span class="sr-only">Facebook</span></a></li>
-            <li><a href="#"><span class="sr-only">Twitter</span></a></li>
-            <li><a href="#"><span class="sr-only">Pinterest</span></a></li>
-            <li><a href="#"><span class="sr-only">Instagram</span></a></li>
-            <li><a href="#"><span class="sr-only">Google Plus</span></a></li>
+            <li><a href="#"><i class="icon-facebook"></i><span class="sr-only">Facebook</span></a></li>
+            <li><a href="#"><i class="icon-twitter-bird"></i><span class="sr-only">Twitter</span></a></li>
+            <li><a href="#"><i class="icon-pinterest"></i><span class="sr-only">Pinterest</span></a></li>
+            <li><a href="#"><i class="icon-instagram"></i><span class="sr-only">Instagram</span></a></li>
+            <li><a href="#"><i class="icon-gplus"></i><span class="sr-only">Google Plus</span></a></li>
           </ul>
         </div>
         <div class="user-menu">
@@ -40,7 +42,7 @@
       </div>
       <div class="row">
         <div class="logo">
-          <a href="/"><img src="./images/logo-primark-hq.png" alt="Primark"></a>
+          <a href="/"><img src="./images/logo-primark-hq.png" alt="PRIMARK" height="17" width="133"></a>
         </div>
         <div class="menu">
           <nav>
@@ -52,10 +54,30 @@
           </nav>
         </div>
         <div class="search">
-          <button id="search-toggle"><span class="sr-only">Toggle Search Menu</span></button>
+          <button id="search-toggle"><span class="sr-only">Toggle Search Menu</span><i class="search-icon"></i></button>
         </div>
       </div>
     </header>
+    <main>
+      <div class="row">
+        <p>Hero Carousel</p>
+      </div>
+      <div class="row">
+        <p>Highlighted products</p>
+      </div>
+      <div class="row">
+        <p>row of three</p>
+      </div>
+      <div class="row">
+        <p>row of four</p>
+      </div>
+      <div class="row">
+        <p>Primania</p>
+      </div>
+      <div class="row">
+        <p>video</p>
+      </div>
+    </main>
 
     <footer>
       2016 &copy; primark stores limited
